Fix layout problem

--- a/src/components/About/LinksAnimation.module.scss
+++ b/src/components/About/LinksAnimation.module.scss
@@ -6,6 +6,7 @@
   padding: 1.5rem 0;
   color: white;
   margin-top: 4rem;
+  overflow: hidden;
   @media only screen and (min-width: 768px) {
     overflow: hidden;
   }
